RDN.League/Content/main.css
/* ... */
 
div.DTFC_RightHeadWrapper table thead tr:last-child th:first-child,
div.DTFC_RightHeadWrapper table thead tr:last-child td:first-child,
div.DTFC_LeftHeadWrapper table thead tr:last-child th:first-child,
div.DTFC_LeftHeadWrapper table thead tr:last-child td:first-child {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}
 
div.DTFC_RightBodyWrapper table,
div.DTFC_LeftBodyWrapper table {
    border-top: none;
    margin: 0 !important;
}
 
div.DTFC_RightBodyWrapper tbody tr:first-child th,
div.DTFC_RightBodyWrapper tbody tr:first-child td,
div.DTFC_LeftBodyWrapper tbody tr:first-child th,
div.DTFC_LeftBodyWrapper tbody tr:first-child td {
    border-top: none;
}
 
div.DTFC_RightFootWrapper table,
div.DTFC_LeftFootWrapper table {
    border-top: none;
    margin-top: 0 !important;
}


/*
 * FixedHeader styles
 */
div.FixedHeader_Cloned table {
	margin: 0 !important
}



/* Folder Tree */


	
/* CSS Tree menu styles */
ol.tree
{
	padding: 0 0 0 30px;
	width: 100%;
}
	ol.tree li 
	{ 
		position: relative; 
		margin-left: -15px;
		list-style: none;
	}
	ol.tree li.file
	{
		margin-left: -1px !important;
	}
		ol.tree li.file a
		{
			background: url(document.png) 0 0 no-repeat;
			color: #fff;
			padding-left: 21px;
			text-decoration: none;
			display: block;
		}
		ol.tree li.file a[href *= '.pdf']	{ background: url(images/document.png) 0 0 no-repeat; }
		ol.tree li.file a[href *= '.html']	{ background: url(images/document.png) 0 0 no-repeat; }
		ol.tree li.file a[href $= '.css']	{ background: url(images/document.png) 0 0 no-repeat; }
		ol.tree li.file a[href $= '.js']		{ background: url(images/document.png) 0 0 no-repeat; }
	ol.tree li input
	{
		position: absolute;
		left: 0;
		margin-left: 0;
		opacity: 0;
		z-index: 2;
		cursor: pointer;
		height: 1em;
		width: 1em;
		top: 0;
	}
		ol.tree li input + ol
		{
			background: url(images/toggle-small-expand.png) 0 0 no-repeat;
			margin: -1.7em 0 0 0; /* 15px */
			height: 1.5em;
		}
		ol.tree li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
	ol.tree li label
	{
		background: url(images/folder-horizontal.png) 15px 1px no-repeat;
		cursor: pointer;
		display: block;
		padding-left: 37px;
	}
    ol.tree li.group-icon label
	{
        background: none;
		cursor: pointer;
		display: block;
		padding-left: 20px;
	}

	ol.tree li input:checked + ol
	{
		background: url(images/toggle-small.png) 0px 0px no-repeat;
		margin: -1.7em 0 0 0; /* 20px */
		padding: 1.563em 0 0 35px;
		height: auto;
	}
		ol.tree li input:checked + ol > li { display: block; margin: 0 0 0.125em;  /* 2px */}
		ol.tree li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }

        ul.token-input-list-facebook { overflow: hidden; border: 1px solid #ccc;
  border-radius:4px 0px 0px 4px; min-height: 34px; border: 1px solid #8496ba; cursor: text; font-size: 12px; font-family: Verdana, sans-serif; min-height: 1px; z-index: 999; margin: 0; padding: 0; background-color: #fff; list-style-type: none; clear: left; }
	ul.token-input-list-facebook li input { border: 0; width: 100px; padding: 3px 8px; background-color: white; margin: 4px 0; -webkit-appearance: caret; }
li.token-input-token-facebook { overflow: hidden; height: 26px; margin: 3px; padding: 4px 8px; background-color: #872f95; color: #FFF; cursor: default;font-size: 12px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; float: left; white-space: nowrap; }
	li.token-input-token-facebook p { display: inline; padding: 0; margin: 0; }
	li.token-input-token-facebook span { color: #a6b3cf; margin-left: 5px; font-weight: bold; cursor: pointer; }
li.token-input-selected-token-facebook { background-color: #5670a6; border: 1px solid #3b5998; color: #fff; }
li.token-input-input-token-facebook { float: left; margin: 0; padding: 0; list-style-type: none; }
div.token-input-dropdown-facebook { position: absolute; width: 400px; background-color: #fff; overflow: hidden; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; cursor: default; font-size: 11px; font-family: Verdana, sans-serif; z-index: 1; }
	div.token-input-dropdown-facebook p { margin: 0; padding: 5px; font-weight: bold; color: #777; }
	div.token-input-dropdown-facebook ul { margin: 0; padding: 0; }
		div.token-input-dropdown-facebook ul li { background-color: #fff; padding: 3px; margin: 0; list-style-type: none; }
			div.token-input-dropdown-facebook ul li.token-input-dropdown-item-facebook { background-color: #fff; }
			div.token-input-dropdown-facebook ul li.token-input-dropdown-item2-facebook { background-color: #fff; }
			div.token-input-dropdown-facebook ul li em { font-weight: bold; font-style: normal; }
			div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-facebook { background-color: #872f95; color: #fff; }

            .scrollup{
			width:40px;
			height:40px;			
			text-indent:-9999px;
			opacity:0.3;
			position:fixed;
			bottom:25px;
			right:25px;
			display:none;			
			background: url('images/icon_top.png') no-repeat;
		}

